update frontend and backend files